feat: 각종 버그 해결